  * fixed bad indentation of first contract
  * fixed colorization of first token after debug condition without arguments
  * "is" now always colored as operator, not as keyword
  * updated to build with dmd 2.055beta

2011-09-24 Version 0.3.27

  * smart reindenting line when typing last char of sole "in", "out" and "body"
  * tweaked smart indenting with respect to enumerators, arrays, labels and more
  * paste a full line or more now causes automatic reindentation (global option to disable)
  * fix: build phobos browse information broken in last version
  * some internal errors are now reported to the output window (like failing to parse JSON file)
  * fixed bad display when deleting characters from line with outlining
  * automatic reindentation was not triggered when typing '{', '}', etc (win 7/8 only?)
  * new option to show demangled symbols in the Error List (not the output window)

unreleased Version 0.3.28

  * mago debugger: fixed crash when there is no sstStaticSym section in the debug info
  * mago debugger: fixed local variables not shown in last function of an object file
  * mago debugger: fixed display of TLS variables
  * mago debugger: added workaround for bad line number debug info, causing mago to switch to assembly easily
  * mago debugger: globals and statics can now be displayed without specifying complete scope
  * cv2pdb: fixed patching of autoexp.dat when the install path contained spaces
  * fix: the import path set in the global options never made it to the command line
  * fixed parser to accept "class B() if(true) : A {}"
  * fixed parser to support import as statement
  * building druntime browse info now uses src folder (di files look ugly and do not compile)
  * building browse info now writes to "Visual D" output pane
  * F1 searches language and phobos documentation for help on identifier
  * added highlighting of asm block, using new colors "Visual D Register/Mnemonic" and "Disabled/Token String" variants